[gd_scene load_steps=10 format=3 uid="uid://b8b4gdry5v1yq"]

[ext_resource type="Texture2D" uid="uid://5mwylo6jkprf" path="res://graphics/world_objects/furnace-Sheet.png" id="1_lxlew"]
[ext_resource type="Script" path="res://scenes/levels/homebase/crafting items/house_crafting.gd" id="1_s33oo"]
[ext_resource type="Texture2D" uid="uid://l44tejf6rpgb" path="res://graphics/world_objects/workbench-Sheet.png" id="2_ms5ds"]
[ext_resource type="Texture2D" uid="uid://cl43yrmj12kta" path="res://graphics/world_objects/tile_map.png" id="2_rdysi"]
[ext_resource type="PackedScene" uid="uid://6y4o8jqhp03g" path="res://scenes/player/player_pistol/player.tscn" id="4_1hbjj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wti8d"]
texture = ExtResource("2_rdysi")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
11:0/0 = 0
11:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:0/0/physics_layer_0/angular_velocity = 0.0
12:0/0 = 0
12:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:0/0/physics_layer_0/angular_velocity = 0.0
13:0/0 = 0
13:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:0/0/physics_layer_0/angular_velocity = 0.0
14:0/0 = 0
14:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:0/0/physics_layer_0/angular_velocity = 0.0
15:0/0 = 0
15:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
10:1/0 = 0
10:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:1/0/physics_layer_0/angular_velocity = 0.0
11:1/0 = 0
11:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:1/0/physics_layer_0/angular_velocity = 0.0
12:1/0 = 0
12:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:1/0/physics_layer_0/angular_velocity = 0.0
13:1/0 = 0
13:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:1/0/physics_layer_0/angular_velocity = 0.0
14:1/0 = 0
14:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:1/0/physics_layer_0/angular_velocity = 0.0
15:1/0 = 0
15:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
9:2/0 = 0
9:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:2/0/physics_layer_0/angular_velocity = 0.0
10:2/0 = 0
10:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:2/0/physics_layer_0/angular_velocity = 0.0
11:2/0 = 0
11:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:2/0/physics_layer_0/angular_velocity = 0.0
12:2/0 = 0
12:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:2/0/physics_layer_0/angular_velocity = 0.0
13:2/0 = 0
13:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:2/0/physics_layer_0/angular_velocity = 0.0
14:2/0 = 0
14:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:2/0/physics_layer_0/angular_velocity = 0.0
15:2/0 = 0
15:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0
11:3/0 = 0
11:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:3/0/physics_layer_0/angular_velocity = 0.0
12:3/0 = 0
12:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:3/0/physics_layer_0/angular_velocity = 0.0
13:3/0 = 0
13:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:3/0/physics_layer_0/angular_velocity = 0.0
14:3/0 = 0
14:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:3/0/physics_layer_0/angular_velocity = 0.0
15:3/0 = 0
15:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
14:4/0 = 0
14:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_v3jqp"]
physics_layer_0/collision_layer = 8
physics_layer_0/collision_mask = 23
sources/0 = SubResource("TileSetAtlasSource_wti8d")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cy7mu"]
size = Vector2(63, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0vl2w"]
size = Vector2(62, 55)

[node name="house crafting" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("1_s33oo")

[node name="map" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="map"]
tile_set = SubResource("TileSet_v3jqp")
format = 2
layer_0/tile_data = PackedInt32Array(-65538, 786432, 0, -2, 786432, 0, 65534, 786432, 0, 131070, 786432, 0, 196606, 786432, 0, 262142, 786432, 0, 327678, 786432, 0, 393214, 786432, 0, 458750, 786432, 0, -131054, 983040, 0, -65518, 851968, 0, 18, 851968, 0, 65554, 983040, 0, 131090, 983040, 0, 196626, 983040, 0, 262162, 851968, 0, 327698, 983040, 0, 393234, 983040, 0, -131055, 917504, 0, -131056, 917504, 0, -131057, 851968, 0, -131058, 917504, 0, -131059, 917504, 0, -131060, 917504, 0, -131061, 917504, 0, -131062, 917504, 0, -131063, 917504, 0, -131064, 917504, 0, -131065, 917504, 0, -131066, 917504, 0, -131067, 917504, 0, -131068, 917504, 0, -131069, 917504, 0, -131070, 851968, 0, -131071, 851968, 0, -131072, 917504, 0, -65537, 851968, 0, 458751, 917504, 0, 393216, 917504, 0, 393217, 917504, 0, 393218, 851968, 0, 393219, 851968, 0, 393220, 917504, 0, 393221, 917504, 0, 393222, 917504, 0, 393223, 851968, 0, 393224, 917504, 0, 393225, 917504, 0, 393226, 917504, 0, 327691, 917504, 0, 327692, 917504, 0, 327693, 917504, 0, 327694, 917504, 0, 327695, 917504, 0, 327696, 851968, 0, 393232, 917504, 0, 393233, 917504, 0, 393231, 917504, 0, 393230, 917504, 0, 393229, 917504, 0, 393228, 917504, 0, 393227, 917504, 0, 262154, 851968, 0, 262153, 851968, 0, 262152, 851968, 0, 262151, 851968, 0, 262150, 851968, 0, 262155, 851968, 0, 262156, 851968, 0, 262157, 917504, 0, 327690, 917504, 0, 327689, 851968, 0, 327688, 917504, 0, 327687, 917504, 0, 327686, 917504, 0, 327685, 917504, 0, 327684, 917504, 0, 327683, 917504, 0, -65539, 851968, 2, -3, 851968, 2, 65533, 851968, 2, 131069, 851968, 2, 196605, 851968, 2, 262141, 851968, 2, 327677, 851968, 2, 393213, 851968, 2, 458749, 851968, 2, 524285, 851968, 3, 524286, 917504, 3, 524287, 917504, 3, 458752, 917504, 3, 458753, 917504, 3, 458754, 917504, 3, 458755, 917504, 3, 458756, 917504, 3, 458757, 917504, 3, 458758, 917504, 3, 458759, 917504, 3, 458760, 917504, 3, -131075, 851968, 1, -131074, 917504, 1, -131073, 917504, 1, -196608, 917504, 1, -196607, 917504, 1, -196606, 917504, 1, -196605, 917504, 1, -196604, 917504, 1, -196603, 917504, 1, -196602, 917504, 1, -196601, 917504, 1, -196600, 917504, 1, -196599, 917504, 1, -196598, 917504, 1, -196597, 917504, 1, -196596, 917504, 1, -196595, 917504, 1, -196594, 917504, 1, -196593, 917504, 1, -196592, 917504, 1, -196591, 917504, 1, -196590, 917504, 1, -196589, 983040, 1, -131053, 983040, 2, -65517, 983040, 2, 19, 983040, 2, 65555, 983040, 2, 131091, 983040, 2, 196627, 983040, 2, 262163, 983040, 2, 327699, 983040, 2, 393235, 983040, 2, 458771, 983040, 3, 458770, 917504, 3, 458769, 917504, 3, 458768, 917504, 3, 458767, 917504, 3, 458766, 917504, 3, 458765, 917504, 3, 458764, 917504, 3, 458763, 917504, 3, 458762, 917504, 3, 131072, 851968, 0, 196607, 851968, 0, 262143, 851968, 0, 327679, 851968, 0, 131071, 851968, 0, 65535, 851968, 0, -1, 851968, 0, 0, 851968, 0, 65536, 851968, 0, 196608, 851968, 0, 262144, 851968, 0, 327680, 851968, 0, -65536, 851968, 0, 393215, 851968, 0, -65535, 851968, 0, 1, 851968, 0, 65537, 851968, 0, 131073, 851968, 0, 196609, 851968, 0, 262145, 851968, 0, 262146, 851968, 0, 196610, 851968, 0, 131074, 851968, 0, 65538, 851968, 0, 2, 851968, 0, -65534, 917504, 0, 262147, 917504, 0, 262148, 917504, 0, 196612, 917504, 0, 131076, 917504, 0, 65540, 851968, 0, 5, 917504, 0, -65531, 851968, 0, 65541, 917504, 0, 131078, 917504, 0, 196614, 917504, 0, 196615, 917504, 0, 131079, 917504, 0, 65543, 851968, 0, 8, 851968, 0, -65528, 851968, 0, 65544, 851968, 0, 131080, 917504, 0, 196617, 917504, 0, 131082, 851968, 0, 65546, 851968, 0, 10, 917504, 0, -65526, 917504, 0, 196619, 851968, 0, 196620, 851968, 0, 131084, 851968, 0, 65548, 851968, 0, 12, 917504, 0, 13, 917504, 0, 65549, 851968, 0, 131085, 851968, 0, 196621, 851968, 0, 262158, 851968, 0, 196622, 851968, 0, 131087, 851968, 0, 65551, 851968, 0, 15, 851968, 0, -65521, 851968, 0, 131088, 851968, 0, 196624, 851968, 0, 262160, 851968, 0, 196625, 851968, 0, 131089, 851968, 0, 65553, 851968, 0, 17, 851968, 0, 262161, 851968, 0, 327697, 851968, 0, 327682, 851968, 0, 327681, 851968, 0, 196613, 917504, 0, 196611, 917504, 0, 262149, 851968, 0, 262159, 851968, 0, 196618, 917504, 0, 196616, 917504, 0, 196623, 851968, 0, 131083, 851968, 0, 131081, 917504, 0, 131086, 851968, 0, 65552, 851968, 0, 65550, 851968, 0, 65547, 851968, 0, 65545, 851968, 0, 9, 917504, 0, 11, 917504, 0, 14, 917504, 0, 16, 851968, 0, -65520, 851968, 0, -65519, 851968, 0, -65522, 917504, 0, -65523, 917504, 0, -65524, 917504, 0, -65525, 917504, 0, -65527, 917504, 0, -65529, 851968, 0, -65530, 851968, 0, 6, 917504, 0, 7, 851968, 0, 65542, 851968, 0, -65532, 917504, 0, -65533, 917504, 0, 4, 917504, 0, 3, 917504, 0, 65539, 851968, 0, 131075, 851968, 0, 131077, 917504, 0, 524297, 917504, 4, 589822, 0, 4, 720894, 0, 4, 786430, 0, 4, 851966, 0, 4, 917502, 0, 4, 983038, 0, 4, 1048574, 65536, 5, 655358, 0, 4, 1048575, 131072, 5, 983040, 131072, 5, 983041, 131072, 5, 983042, 131072, 5, 983043, 131072, 5, 983044, 131072, 5, 983047, 196608, 5, 983046, 131072, 5, 983045, 131072, 5, 917511, 0, 4, 851975, 0, 4, 655367, 0, 4, 589831, 0, 4, 524295, 0, 4, 524288, 393216, 4, 589823, 393216, 4, 524289, 393216, 4, 524290, 393216, 4, 524291, 393216, 4, 524292, 393216, 4, 524293, 393216, 4, 655364, 458752, 4, 655363, 458752, 5, 655362, 458752, 4, 655361, 458752, 4, 655360, 458752, 5, 786436, 393216, 4, 786435, 393216, 4, 786434, 393216, 4, 786433, 393216, 4, 917510, 393216, 5, 917509, 393216, 5, 917508, 393216, 5, 917507, 393216, 5, 917506, 393216, 5, 917505, 393216, 5, 917504, 393216, 5)

[node name="bench" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 162.0
offset_top = -24.0
offset_right = 274.0
offset_bottom = 37.0
scale = Vector2(0.5, 0.5)

[node name="Button1" type="Button" parent="bench"]
layout_mode = 2
keep_pressed_outside = true
text = "200 Wood"

[node name="Label" type="Label" parent="bench"]
layout_mode = 2
text = "crafting bench"

[node name="furance" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 252.0
offset_top = -24.0
offset_right = 334.0
offset_bottom = 41.0
scale = Vector2(0.5, 0.5)

[node name="Button2" type="Button" parent="furance"]
layout_mode = 2
text = "70 stone"

[node name="Label" type="Label" parent="furance"]
layout_mode = 2
text = "furance"

[node name="furance2" type="Area2D" parent="."]
visible = false
position = Vector2(58, 114)

[node name="CollisionShape2D" type="CollisionShape2D" parent="furance2"]
position = Vector2(169.5, 0.5)
shape = SubResource("RectangleShape2D_cy7mu")

[node name="furance2" type="Sprite2D" parent="furance2"]
position = Vector2(170, 1)
texture = ExtResource("1_lxlew")
hframes = 2

[node name="VBoxContainer" type="VBoxContainer" parent="furance2/furance2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -52.0
offset_right = -9.5
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button3" type="Button" parent="furance2/furance2/VBoxContainer"]
layout_mode = 2
text = "craft"

[node name="crafting bench" type="Area2D" parent="."]
visible = false
position = Vector2(58, 114)

[node name="CollisionShape2D" type="CollisionShape2D" parent="crafting bench"]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_0vl2w")

[node name="crafting bench" type="Sprite2D" parent="crafting bench"]
texture = ExtResource("2_ms5ds")

[node name="VBoxContainer" type="VBoxContainer" parent="crafting bench/crafting bench"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -52.0
offset_right = -9.5
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button4" type="Button" parent="crafting bench/crafting bench/VBoxContainer"]
layout_mode = 2
text = "craft"

[node name="player" parent="." instance=ExtResource("4_1hbjj")]
scale = Vector2(0.5, 0.5)

[node name="Camera2D" type="Camera2D" parent="player"]

[connection signal="pressed" from="bench/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="furance/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="furance2/furance2/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="crafting bench/crafting bench/VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
